<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/teTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enterTitle"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGenre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/genre"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/teGenre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enterGenre"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvYear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/year"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/teYear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enterYear"
        android:inputType="number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRating2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rating"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/ratingSpin2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_weight="1"
        android:entries="@array/spinnerItems"
        android:scrollbarSize="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show" />

    </LinearLayout>

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/return2" />

</LinearLayout>